--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,13 @@ jobs:
         run: |
           docker build -t ghcr.io/${{ github.repository }}:latest .
 
+      - name: Scan image with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ghcr.io/${{ github.repository }}:latest
+          format: table
+          exit-code: 0
+
       - name: Push Docker image
         run: |
           docker push ghcr.io/${{ github.repository }}:latest
